# react-django-starter

./: Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/app/: settings.py  urls.py
backend/src/counters/: models.py  urls.py  views.py
backend/src/counters/migrations/: 0001_initial.py
backend/src/localstack/: apps.py  urls.py  views.py
frontend/: frontend.env
frontend/src/components/: App.js  ConnectCard.js  UploadCard.js
