[tool.poetry]
name = "shipyard-django-starter"
version = "0.1.0"
description = ""
authors = ["Shipyard <team@shipyard.build>"]

[tool.poetry.dependencies]
python = "3.8.7"
Django = "3.1.4"
psycopg2-binary = "2.8.6"
boto3 = "1.16.44"
localstack-client = "1.10"
django-cors-headers = "3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
